--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -7,9 +7,9 @@ html, body {
     margin: 0;
 }
 
-.full-height {
+/*.full-height {
     height: 100vh;
-}
+}*/
 
 .flex-center {
     align-items: center;
@@ -28,7 +28,7 @@ html, body {
 }
 
 .content {
-    text-align: center;
+    text-align: left;
 }
 
 .title {
