--- a/public/css/app.css
+++ b/public/css/app.css
@@ -8,9 +8,9 @@ body {
   margin: 0;
 }
 
-.full-height {
-  height: 100vh;
-}
+/*.full-height {
+    height: 100vh;
+}*/
 
 .flex-center {
   -webkit-box-align: center;
@@ -32,7 +32,7 @@ body {
 }
 
 .content {
-  text-align: center;
+  text-align: left;
 }
 
 .title {
